[package]
name = "applevisor"
version = "0.1.3"
authors = ["lyte <contact@impalabs.com>"]
edition = "2021"
description = "Rust bindings for the Apple Silicon Hypervisor Framework"
documentation = "https://docs.rs/applevisor"
readme = "README.md"
repository = "https://github.com/impalabs/applevisor"
license = "MIT OR Apache-2.0"
keywords = ["apple", "hypervisor", "macos", "virtualization", "aarch64"]
categories = ["os::macos-apis", "hardware-support", "api-bindings", "virtualization"]

[dependencies]
applevisor-sys = { version = "0.1.3", default-features = false }
concat-idents = { version = "1.1.5", optional = true }

[features]
default = [ "dep:concat-idents" ]
simd_nightly = [ "applevisor-sys/simd_nightly" ]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]
