[package]
name = "applevisor-sys"
version = "0.1.1"
authors = ["lyte <hyperpom@impalabs.fr>"]
edition = "2021"
description = "Unsafe rust bindings for the Apple Silicon Hypervisor Framework"
documentation = "https://docs.rs/applevisor-sys"
readme = "README.md"
repository = "https://github.com/impalabs/applevisor"
license = "GPL-3.0-or-later"
keywords = ["apple", "hypervisor", "macos", "virtualization", "aarch64"]
categories = ["os::macos-apis", "hardware-support", "api-bindings", "virtualization"]

[dependencies]
libc = "0.2"