[package]
name = "applevisor-sys"
version = "0.1.1"
authors = ["lyte <contact@impalabs.com>"]
edition = "2021"
description = "Unsafe rust bindings for the Apple Silicon Hypervisor Framework"
documentation = "https://docs.rs/applevisor-sys"
readme = "README.md"
repository = "https://github.com/impalabs/applevisor"
license = "MIT OR Apache-2.0"
keywords = ["apple", "hypervisor", "macos", "virtualization", "aarch64"]
categories = ["os::macos-apis", "hardware-support", "api-bindings", "virtualization"]

[dependencies]
libc = "0.2"

[features]
default = []
simd_nightly = []

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]
